k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consoles-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2intact
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/(.*)$ /$1 break;  # Rewrite paths for static assets
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio-service
                port:
                  number: 8001
